--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ html {
   font-size: 10px;
 }
 
+/* HEADER */
+
 header {
   height: 100vh;
   width: 100%;
@@ -18,14 +20,6 @@ header {
   overflow-x: hidden;
   font-family: 'Oswald', sans-serif;
   z-index: 1;
-}
-
-main {
-  height: 100vh;
-  background-color: grey;
-  margin-top: 100vh;
-  position: relative;
-  z-index: 2;
 }
 
 header img {
@@ -53,6 +47,7 @@ header hgroup {
 
 header h1 {
   font-size: 5rem;
+  font-weight: 700;
 }
 
 header h3 {
@@ -65,7 +60,7 @@ header h3 {
   height: 56px;
   border: 4px solid black;
   position: absolute;
-  bottom: 7%;
+  bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50%;
@@ -87,6 +82,61 @@ header h3 {
 .fa-angle-down {
   animation: arrow 1.5s infinite linear;
 }
+
+/* HEADER END */
+
+/* MAIN */
+
+main {
+  height: 100vh;
+  background-color: transparent;
+  margin-top: 100vh;
+  font-family: 'Oswald', sans-serif;
+  position: relative;
+  z-index: 2;
+}
+
+main h3 {
+  font-size: 2.6rem;
+  font-weight: 700;
+}
+
+main p {
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: justify;
+}
+main .card {
+  margin: 3%;
+  padding: 3%;
+  background-color: white;
+  border-radius: 2%;
+  border: solid;
+  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+}
+
+.footer {
+  width: 100%;
+  height: 20vh;
+  background-color: lightgray;
+  font-size: 2rem;
+  font-weight: 400;
+  position: absolute;
+  bottom: 0;
+  z-index: 2;
+  padding: 3%;
+  font-family: 'Oswald', sans-serif;
+  border-top: solid;
+}
+.footer a {
+  text-decoration: none;
+  color: black;
+}
+
+/* MAIN END */
+
+/* MEDIA QUERIES */
+
 @media (orientation: portrait) {
   h3 span::after {
     content: '\A';
@@ -99,14 +149,8 @@ header h3 {
     height: 90%;
     right: -5%;
   }
-
-  h3 span::after {
-    content: '\A';
-    white-space: pre;
-  }
 }
-
-@media (max-width: 420px) {
+@media (max-width: 575px) {
   header h1 {
     font-size: 3rem;
   }
@@ -127,8 +171,21 @@ header h3 {
   }
 }
 
+@media (min-width: 576px) {
+}
+@media (min-width: 576px) and (orientation: portrait) {
+}
+@media (min-width: 768px) {
+}
 
-/* Animacja */
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
+}
+/* MEDIA QUERIES END */
+
+/* ANIMACJE */
 
 @keyframes arrow {
   0% {
